# modulo

./: .pylintrc  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-publish-sign-release.yml  lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: modulo.rst
modulo/: __init__.py  modulo.py
src/modulo/: __init__.py  modulo.py
